# cascadepooling

./: LICENSE  README.md  main.py  pyproject.toml
src/data/raw/: bankruptcies.csv  companies.csv  companies_labelled.csv
src/scraper/: scraper.py
